@@ -1,7 +1,10 @@
 var font = atob("/4H/AAD/AACPmfEAgZH/APAQ/wDxmY8A/5GfAICA/wD/kf8A8ZH/AA==");
+Graphics.prototype.setFontTest = function() {
+  this.setFontCustom(font, "0".charCodeAt(0), 4, 8);
+}
+
 
 var g = Graphics.createArrayBuffer(16,16,8);
-
 
 
 g.dump = _=>{
@@ -115,6 +118,27 @@ SHOULD_BE(`
 
 g.clear();
 g.setFontCustom(font, "0".charCodeAt(0), 4, 8 + (2<<8));
+g.drawString("42");
+SHOULD_BE(`
+##..##..######..
+##..##..######..
+##..##......##..
+##..##......##..
+##..##......##..
+##..##......##..
+######....####..
+######....####..
+....##..####....
+....##..####....
+....##..##......
+....##..##......
+....##..##......
+....##..##......
+....##..######..
+....##..######..`);
+
+g.clear();
+g.setFont("Test",2);
 g.drawString("42");
 SHOULD_BE(`
 ##..##..######..
