@@ -95,6 +95,7 @@
             Bangle.js: Keep widget area free when using showPrompt/Alert/etc (fix #1756)
             Add more info about flash memory to process.env/process.memory
             Add Graphics.quadraticBezier() 
+            Allow Graphics.setFont to be used with custom fonts (fix #1762)
 
      2v04 : Allow \1..\9 escape codes in RegExp
             ESP8266: reading storage is not working for boot from user2 (fix #1507)
